# CreWrite

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: api.ts  main.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compile.rs  config.rs  error.rs  export.rs  git.rs  index.rs  lib.rs  main.rs  markdown.rs  state.rs  watcher.rs
src-tauri/src/vault/: fs_ops.rs  mod.rs  tree.rs
src/ui/: editor.ts  export.ts  git.ts  graph.ts  icons.ts  mermaidImage.ts  modal.ts  preview.ts  settings.ts  tree.ts
